--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ input[type="file"]{display:none}
 .flow{padding:24px 16px}
 
 .fld-l{font-size:11px;color:#4a5568;text-transform:uppercase;letter-spacing:1px;margin-bottom:8px;font-weight:700;margin-top:20px}
-.fld-i{width:100%;padding:18px 20px;border-radius:16px;border:1px solid #1e2538;background:#111827;color:#e2e8f0;font-size:16px;outline:none;font-family:inherit;-webkit-appearance:none;appearance:none}
+.fld-i{width:100%;padding:18px 20px;border-radius:16px;border:1px solid #1e2538;background:#111827;color:#e2e8f0;font-size:16px;outline:none;font-family:inherit;-webkit-appearance:none;appearance:none;touch-action:manipulation;-webkit-text-size-adjust:100%;box-sizing:border-box}
 .fld-i:focus{border-color:rgba(212,169,106,0.35)}
 .fld-i::placeholder{color:#2d3748}
 
