--- a/index.html
+++ b/index.html
@@ -16,6 +16,30 @@
 <meta name="mobile-web-app-capable" content="yes">
 <script>
 if('serviceWorker' in navigator){navigator.serviceWorker.register('/sw.js').catch(()=>{});}
+
+// Prevent zoom on input focus (iOS Safari + Android Chrome)
+document.addEventListener('DOMContentLoaded', function(){
+  // Method 1: Dynamically set viewport on focus/blur
+  var vp = document.querySelector('meta[name="viewport"]');
+  document.addEventListener('focusin', function(e){
+    if(e.target.tagName==='INPUT'||e.target.tagName==='TEXTAREA'||e.target.tagName==='SELECT'){
+      vp.setAttribute('content','width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no');
+    }
+  });
+  document.addEventListener('focusout', function(){
+    vp.setAttribute('content','width=device-width,initial-scale=1.0,maximum-scale=5.0,user-scalable=yes');
+  });
+
+  // Method 2: Prevent touchstart double-tap zoom near inputs
+  var lastTouchEnd = 0;
+  document.addEventListener('touchend', function(e){
+    var now = Date.now();
+    if(now - lastTouchEnd <= 300){
+      e.preventDefault();
+    }
+    lastTouchEnd = now;
+  }, {passive:false});
+});
 </script>
 <style>
 *{margin:0;padding:0;box-sizing:border-box;-webkit-tap-highlight-color:transparent}
